# recognition/openapi.yaml
@@ -293,6 +293,9 @@ components:
         pages_total:
           type: integer
           title: Pages Total
+        text_layer_pages:
+          type: integer
+          title: Text Layer Pages
         has_text_layer:
           type: boolean
           title: Has Text Layer
@@ -305,6 +308,7 @@ components:
       type: object
       required:
       - pages_total
+      - text_layer_pages
       - has_text_layer
       - text_chars_total
       - estimated_seconds
